// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SyncErrorMessage > should handle retry 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <strong>
      ARK Mainnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      Lisk Devnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
      data-ring-focus-margin="-m-1"
      data-testid="Link"
      href="#/"
    >
      <span
        class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
      >
        here
      </span>
    </a>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render multiple failed networks 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <strong>
      ARK Mainnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      Lisk Devnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
      data-ring-focus-margin="-m-1"
      data-testid="Link"
      href="#/"
    >
      <span
        class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
      >
        here
      </span>
    </a>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render one failed network 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
      data-ring-focus-margin="-m-1"
      data-testid="Link"
      href="#/"
    >
      <span
        class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
      >
        here
      </span>
    </a>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render two failed networks 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      ARK Mainnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
      data-ring-focus-margin="-m-1"
      data-testid="Link"
      href="#/"
    >
      <span
        class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
      >
        here
      </span>
    </a>
  </span>
   to retry.
</div>
`;
